erDiagram
    USERS {
        bigint id PK
        varchar name
        varchar email UK
        varchar password
        varchar role
        timestamp created_at
        timestamp updated_at
    }
    CATEGORIES {
        bigint id PK
        varchar name
        varchar slug UK
        text description
        varchar status
        timestamp created_at
        timestamp updated_at
    }
    COMPANIES {
        bigint id PK
        varchar name
        varchar legal_name
        varchar slug UK
        date registered_at
        varchar province
        varchar business_type
        text description
        varchar website_url
        boolean published
        timestamp created_at
        timestamp updated_at
    }
    PROJECTS {
        bigint id PK
        bigint category_id FK
        varchar title
        varchar slug UK
        longtext description
        varchar client_name
        varchar project_url
        varchar image
        varchar status
        timestamp published_at
        timestamp created_at
        timestamp updated_at
    }
    ARTICLES {
        bigint id PK
        bigint category_id FK
        varchar title
        varchar slug UK
        text summary
        longtext content
        varchar cover_image
        varchar status
        timestamp published_at
        timestamp created_at
        timestamp updated_at
    }
    SERVICES {
        bigint id PK
        varchar name
        text description
        varchar icon
        varchar status
        int sort_order
        timestamp created_at
        timestamp updated_at
    }
    TEAM_MEMBERS {
        bigint id PK
        varchar name
        varchar position
        text bio
        varchar profile_image
        varchar email
        varchar linkedin_url
        varchar status
        timestamp created_at
        timestamp updated_at
    }

    CATEGORIES ||--o{ PROJECTS : classifies
    CATEGORIES ||--o{ ARTICLES : classifies
